added character list section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,208 @@
                     <img src="./images/Weapons/weapon_sword.png" alt="" class="weapon">
                 </div>
             </div>
+            <div class="characters-list">
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Baizhu.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_dendro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Baizhu</h4>
+                        <span class="condition">NEW</span>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Kaveh.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_dendro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Kaveh</h4>
+                        <span class="condition">NEW</span>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Albedo.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_geo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Albedo</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Alhaitham.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_dendro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Alhaitham</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Aloy.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_cryo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Aloy</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Amber.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_pyro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Amber</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Ayaka.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_cryo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Ayaka</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Ayato.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_hydro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Ayato</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Barbara.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_hydro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Barbara</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Beidou.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_electro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Beidou</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Bennett.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_pyro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Bennet</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Candace.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_hydro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Candacae</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Childe.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_hydro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Childe</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Chongyun.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_cryo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Chongyun</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Collei.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_dendro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Collei</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Cyno.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_electro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Cyno</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Dehya.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_pyro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Dehya</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Diluc.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_pyro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Diluc</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Diona.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_cryo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Diona</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Dori.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_electro.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Dori</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Eula.png" alt="" class="characters-img stars-5">
+                        <img src="./images/Elements/element_cryo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Eula</h4>
+                    </div>
+                </a>
+                <a href="" class="characters-box">
+                    <div class="character">
+                        <img src="./images/Characters/Faruzan.png" alt="" class="characters-img stars-4">
+                        <img src="./images/Elements/element_anemo.png" alt="" class="elements-img">
+                    </div>
+                    <div class="character-name">
+                        <h4 class="name">Faruzan</h4>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     
