Adding tier list page and finishing main page

--- a/index.html
+++ b/index.html
@@ -781,9 +781,9 @@
             <div class="community-links">
                 <h4>Tautan Komunitas</h4>
                 <div class="linked-option">
-                    <a href="" class="linked">Discord</a>
-                    <a href="" class="linked">Instagram</a>
-                    <a href="" class="linked">Facebook</a>
+                    <a href="https://discord.com/invite/genshindo" target="_blank" class="linked">Discord</a>
+                    <a href="https://instagram.com/genshinbuild.id?igshid=MzRlODBiNWFlZA==" target="_blank" class="linked">Instagram</a>
+                    <a href="https://www.facebook.com/groups/GenshinImpact.Indonesia/?locale=id_ID" target="_blank" class="linked">Facebook</a>
                 </div>
             </div>
         </div>
