--- a/tier/index.html
+++ b/tier/index.html
@@ -92,8 +92,199 @@
                     </div>
                 </div>
             </div>
+            <div class="tier-top-section">
+                <div class="disclaimer-box">
+                    <h4 class="disclaimer">Berdasarkan daftar tingkatan oleh <a href="https://game8.co/" target="_blank" class="disclaimer-linked">Game8. Lihat kontennya!</a></h4>
+                </div>
+                <div class="create-box">
+                    <a href="" class="create">Buat milik anda sendiri</a>
+                </div>
+            </div>
+            <div class="tier-option">
+                <div class="tier-list">
+                    <h4 class="text">Daftar Tingkat</h4>
+                </div>
+                <div class="option-line">
+                    <div class="line"></div>
+                </div>
+                <div class="tier-list">
+                    <h4 class="text">Daftar Tingkat C0</h4>
+                </div>
+                <div class="option-line">
+                    <div class="line"></div>
+                </div>
+                <div class="tier-list">
+                    <h4 class="text">Daftar Tingkat C6</h4>
+                </div>
+            </div>
+            <div class="tier-box-list-section">
+                <div class="category">
+                    <div class="empty-box box">
+                        <div class="empty text-category"></div>
+                    </div>
+                    <div class="dps-box box">
+                        <h4 class="dps text-category">DPS</h4>
+                    </div>
+                    <div class="sub-dps-box box">
+                        <h4 class="sub-dps text-category">Sub-DPS</h4>
+                    </div>
+                    <div class="support-box box">
+                        <h4 class="support text-category">Support</h4>
+                    </div>
+                </div>
+                <div class="main-category">
+                    <div class="category-layers category-1">
+                        <div class="tier-box box">
+                            <div class="tier text-category">SS</div>
+                        </div>
+                        <div class="char-box box box-dps">
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_cryo.png" alt="" class="elements">
+                                <img src="../images/Characters/Ayaka.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_pyro.png" alt="" class="elements">
+                                <img src="../images/Characters/Hu_Tao.png" alt="" class="char stars-5">
+                                <h4 class="cons">C1</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_electro.png" alt="" class="elements">
+                                <img src="../images/Characters/Raiden.png" alt="" class="char stars-5">
+                                <h4 class="cons">C2</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_dendro.png" alt="" class="elements">
+                                <img src="../images/Characters/Alhaitham.png" alt="" class="char stars-5">
+                                <h4 class="cons">C1</h4>
+                            </a>
+                        </div>
+                        <div class="char-box box box-sub-dps">
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_dendro.png" alt="" class="elements">
+                                <img src="../images/Characters/Nahida.png" alt="" class="char stars-5">
+                                <h4 class="cons">C2</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_cryo.png" alt="" class="elements">
+                                <img src="../images/Characters/Raiden.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_hydro.png" alt="" class="elements">
+                                <img src="../images/Characters/Xingqiu.png" alt="" class="char stars-4">
+                                <h4 class="cons">C6</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_hydro.png" alt="" class="elements">
+                                <img src="../images/Characters/Yelan.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_pyro.png" alt="" class="elements">
+                                <img src="../images/Characters/Xiangling.png" alt="" class="char stars-4">
+                                <h4 class="cons">C4</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_anemo.png" alt="" class="elements">
+                                <img src="../images/Characters/Kazuha.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                        </div>
+                        <div class="char-box box box-sub-dps">
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_pyro.png" alt="" class="elements">
+                                <img src="../images/Characters/Bennett.png" alt="" class="char stars-4">
+                                <h4 class="cons">C1</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_anemo.png" alt="" class="elements">
+                                <img src="../images/Characters/Kazuha.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_geo.png" alt="" class="elements">
+                                <img src="../images/Characters/Zhongli.png" alt="" class="char stars-5">
+                                <h4 class="cons">C6</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_electro.png" alt="" class="elements">
+                                <img src="../images/Characters/Raiden.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_dendro.png" alt="" class="elements">
+                                <img src="../images/Characters/Nahida.png" alt="" class="char stars-5">
+                                <h4 class="cons">C2</h4>
+                            </a>
+                            <a href="" class="linked-char">
+                                <img src="../images/Elements/element_hydro.png" alt="" class="elements">
+                                <img src="../images/Characters/Kokomi.png" alt="" class="char stars-5">
+                                <h4 class="cons">C0</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sub-dps-box box">
+                        <h4 class="sub-dps text-category">Sub-DPS</h4>
+                    </div>
+                    <div class="support-box box">
+                        <h4 class="support text-category">Support</h4>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <img src="../images/wave.svg" alt="" class="wave">
+        <div class="main-footer">
+            <div class="footer-about">
+                <div class="title-section">
+                    <div class="title-link-section">
+                        <div class="title-line-top">
+                            <div class="line"></div>
+                        </div>
+                        <a href="./" class="title-link">
+                            GENSHIN IMPACT INDONESIA
+                        </a>
+                        <div class="title-line-bottom">
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <p class="content-section">
+                        Menyediakan sebuah informasi tentang genshin Impact. Mulai dari berita terbaru juga serta panduan untuk bermain. Nikmati fiturnya dan jangan lupa bagikan website ini. Semoga bermanfaat.
+                    </p>
+                    <div class="disclaimer">
+                        <h4 class="title-disclaimer">Disclaimer</h4>
+                        <p class="content-disclaimer">Tidak berafiliasi dengan atau didukung oleh miHoYo.</p>
+                    </div>
+                    <p class="copyright">© GENSHIN-ID <span class="year-dinamic">2023</span></p>
+                </div>
+            </div>
+            <div class="footer-more-links">
+                <h4>Lebih Banyak Tautan</h4>
+                <div class="linked-option">
+                    <a href="" class="linked">Kontak</a>
+                    <a href="" class="linked">Kebijakan Pribadi</a>
+                    <a href="" class="linked"></a>
+                </div>
+            </div>
+            <div class="community-links">
+                <h4>Tautan Komunitas</h4>
+                <div class="linked-option">
+                    <a href="https://discord.com/invite/genshindo" target="_blank" class="linked">Discord</a>
+                    <a href="https://instagram.com/genshinbuild.id?igshid=MzRlODBiNWFlZA==" target="_blank" class="linked">Instagram</a>
+                    <a href="https://www.facebook.com/groups/GenshinImpact.Indonesia/?locale=id_ID" target="_blank" class="linked">Facebook</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-line">
+            <div class="line"></div>
+        </div>
+        <div class="watermark">
+            <h4>- Dibuat oleh <a href="https://ngabskyy.netlify.app">Kyy.</a> -</h4>
+        </div>
+    </footer>
     
     <script src="../js/teams.js"></script>
 </body>
